tests/spec/compile-fail/060_default_allocator_unavailable_freestanding.zn
// category: compile-fail
// stage: mvp
// milestone: M4
// profile: freestanding
// purpose: freestanding code without a default allocator must use In-suffix allocation APIs

module tests.fail.defaultAllocatorUnavailableFreestanding;

fn bad() -> Vector<U8> {
    return Vector<U8>.withCapacity(16); // expected-error[E1002]: no profile default allocator is available; use withCapacityIn
}
